Fixes the center + gutter look of site to be better on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -15,9 +15,9 @@
 
 body {
     font-family: 'Recursive', sans-serif;
-    margin: 2em;
-    padding-left: 10em;
-    padding-right: 10em;
+    margin: 2em auto;
+    padding: 0.5em;
+    max-width: 72ch;
     background-color: var(--bg-color);
     color: var(--font-color);
     font-size: 1.25em;
